--- a/popup.html
+++ b/popup.html
@@ -5,20 +5,33 @@
     <style>
         body {
             width: 400px;
-            padding: 10px;
+            margin: 0;
+            padding: 16px;
             font-family: 'Microsoft YaHei', sans-serif;
+            overflow: hidden;
+            height: 600px;
+            display: flex;
+            flex-direction: column;
         }
+
+        h3 {
+            margin-top: 0;
+            margin-bottom: 16px;
+        }
+
         .switch {
             position: relative;
             display: inline-block;
             width: 60px;
             height: 34px;
         }
+
         .switch input {
             opacity: 0;
             width: 0;
             height: 0;
         }
+
         .slider {
             position: absolute;
             cursor: pointer;
@@ -30,6 +43,7 @@
             transition: .4s;
             border-radius: 34px;
         }
+
         .slider:before {
             position: absolute;
             content: "";
@@ -41,58 +55,74 @@
             transition: .4s;
             border-radius: 50%;
         }
+
         input:checked + .slider {
             background-color: #2196F3;
         }
+
         input:checked + .slider:before {
             transform: translateX(26px);
         }
+
         .status {
             margin-left: 10px;
             vertical-align: super;
         }
+
         .stats-container {
             margin-top: 15px;
             border-top: 1px solid #eee;
             padding-top: 10px;
+            flex: 1;
+            flex-direction: column;
+            min-height: 0;
         }
+
         .stats-header {
             display: flex;
             justify-content: space-between;
             align-items: center;
             margin-bottom: 10px;
+            flex-shrink: 0;
         }
+
         .stats-count {
             color: #2196F3;
             font-weight: bold;
         }
+
         .ad-list {
-            max-height: 500px;
+            flex: 1;
             overflow-y: auto;
             border: 1px solid #eee;
             border-radius: 4px;
-            padding: 5px;
             background: #fff;
+            margin: 0;
+            padding: 0;
         }
+
         .ad-item {
             padding: 12px 15px;
             border-bottom: 1px solid #f5f5f5;
             font-size: 13px;
             line-height: 1.54;
-            position: relative;
         }
+
         .ad-item:hover {
             background-color: #f8f8f8;
         }
+
         .ad-item:last-child {
             border-bottom: none;
         }
+
         .ad-header {
             display: flex;
             align-items: center;
             margin-bottom: 4px;
             gap: 6px;
         }
+
         .ad-type {
             font-size: 12px;
             color: #f73131;
@@ -101,6 +131,7 @@
             padding: 0 2px;
             border-radius: 2px;
         }
+
         .ad-location {
             font-size: 12px;
             color: #666;
@@ -108,11 +139,13 @@
             padding: 1px 4px;
             border-radius: 2px;
         }
+
         .ad-number {
             font-size: 12px;
             color: #999;
             margin-left: auto;
         }
+
         .ad-title {
             font-size: 16px;
             margin-bottom: 4px;
@@ -122,28 +155,33 @@
             font-weight: normal;
             line-height: 1.6;
         }
+
         .ad-title:hover {
             text-decoration: underline;
             color: #315efb;
         }
+
         .ad-description {
             color: #333;
             margin-bottom: 4px;
             line-height: 1.6;
             font-size: 13px;
         }
+
         .ad-url {
             color: #008000;
             font-size: 13px;
             word-break: break-all;
             line-height: 1.6;
         }
+
         .no-ads {
             text-align: center;
             color: #666;
             padding: 20px;
             font-style: italic;
         }
+
         .refresh-button {
             background: none;
             border: none;
@@ -152,8 +190,28 @@
             padding: 5px;
             font-size: 20px;
         }
+
         .refresh-button:hover {
             color: #1976D2;
+        }
+
+        /* 自定义滚动条样式 */
+        .ad-list::-webkit-scrollbar {
+            width: 8px;
+        }
+
+        .ad-list::-webkit-scrollbar-track {
+            background: #f1f1f1;
+            border-radius: 4px;
+        }
+
+        .ad-list::-webkit-scrollbar-thumb {
+            background: #c1c1c1;
+            border-radius: 4px;
+        }
+
+        .ad-list::-webkit-scrollbar-thumb:hover {
+            background: #a8a8a8;
         }
     </style>
 </head>
